--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -165,7 +165,7 @@ main {
     line-height: 40px;
     overflow: hidden;
     -webkit-box-orient: vertical;
-    word-break:normal;
+    word-break: normal;
 }
 
 /* noticias */
@@ -247,7 +247,7 @@ main {
 
 .carrossel-item {
     position: relative;
-    background-image: linear-gradient(45deg, rgba(14, 153, 233, 0.815) 15% , rgba(82, 181, 238, 0.801) 50%);
+    background-image: linear-gradient(45deg, rgba(14, 153, 233, 0.815) 15%, rgba(82, 181, 238, 0.801) 50%);
     border-radius: 20px;
 }
 
@@ -295,7 +295,8 @@ main {
 }
 
 .form-title {
-    font-size: 3.125rem;
+    font-size: 2.5rem;
+    font-weight: bold;
 }
 
 .form-contact-us-actions {
@@ -313,9 +314,9 @@ main {
 }
 
 .form-input {
-    border-radius: 0.5rem;
-    font-size: 1.5rem;
-    padding: 1rem 0.75rem;
+    border-radius: 10px;
+    font-size: 1.25rem;
+    padding: 0.5rem 1rem;
     border: 1px solid #FFFFFF;
     background-color: #47a7d3;
     color: #FFFFFF;
@@ -323,7 +324,7 @@ main {
 
 .form-input::placeholder {
     color: #FFFFFF;
-    font-size: 1.75rem;
+    font-size: 1.25rem;
 }
 
 .form-input:focus {
@@ -340,8 +341,8 @@ main {
 }
 
 .form-fields-textarea {
-    font-size: 1.5rem;
-    border-radius: 0.5rem;
+    font-size: 1.25rem;
+    border-radius: 10px;
     padding: 1rem;
     border: 1px solid #FFFFFF;
     background-color: #47a7d3;
@@ -351,6 +352,7 @@ main {
 }
 
 .form-fields-textarea::placeholder {
+    font-size: 1.25rem;
     color: #FFFFFF;
 }
 
