--- a/public/assets/css/noticiario.css
+++ b/public/assets/css/noticiario.css
@@ -15,7 +15,7 @@ body {
     display: flex;
     align-items: center;
     flex-direction: column;
-    height: 80vh;
+    min-height: 80vh;
 }
 
 .card_container {
