--- a/public/assets/css/noticiario.css
+++ b/public/assets/css/noticiario.css
@@ -5,6 +5,42 @@ body {
 .titulo {
     font-size: 3vw;
     font-weight: bold;
+    display: flex;
+    gap: 1rem;
+}
+
+.dropdown>span {
+    padding: 2px;
+}
+
+.dropdown:hover>span {
+    cursor: pointer;
+    background-color: #209DD5;
+    border-radius: 4px;
+}
+
+.dropdown:hover .dropdown-menu {
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(220, 234, 247);
+}
+
+.dropdown-menu {
+    position: absolute;
+    display: none;
+    box-shadow: 0 0 2px black;
+    border-radius: 8px;
+    gap: 5px;
+    padding: 2px;
+}
+
+.dropdown-menu a {
+    background-color: aliceblue;
+    padding: 8px;
+    font-size: 16px;
+    display: block;
+    border-radius: 8px;
+    border: 1px solid black;
 }
 
 .ponto {
